@@ -20,7 +20,7 @@
 
 <addon id="plugin.video.hulu"
        name="Hulu"
-       version="2.6.8"
+       version="2.6.9"
        provider-name="BlueCop">
   <requires>
     <import addon="xbmc.python" version="1.0"/>
